# SimCortex

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  README.md  entrypoint.sh  requirements.freeze.txt  requirements.runtime.txt
scripts/: docker_smoke_test.sh  run_pipeline.py
src/simcortex/cli/: main.py
src/simcortex/configs/deform/: eval.yaml  inference.yaml  train.yaml
src/simcortex/configs/initsurf/: generate.yaml
src/simcortex/configs/seg/: eval.yaml  inference.yaml  train.yaml
src/simcortex/deform/: eval.py  inference.py  train.py
src/simcortex/deform/data/: dataloader.py
src/simcortex/deform/models/: surfdeform.py
src/simcortex/initsurf/: generate.py  paths.py
src/simcortex/preproc/: fs_to_mni.py  mri_to_mni_inference.py
src/simcortex/seg/: eval.py  inference.py  train.py
src/simcortex/seg/data/: dataloader.py
src/simcortex/seg/models/: unet.py
